adjust final datails

--- a/src/components/Header/desktop/style.scss
+++ b/src/components/Header/desktop/style.scss
@@ -70,6 +70,18 @@
   padding: 10px;
 }
 
+.inputSearchHeaderDesktop {
+  height: 31px;
+  font-family: "TitilliumWeb";
+  border-radius: 10px;
+  width: 791px;
+  color: #353535;
+  align-items: center;
+  background-color: #EFEFEF;
+  border: none;
+  padding: 5px;
+}
+
 .menuTittle {
   font-family: "TitilliumWeb" !important;
   text-transform: capitalize !important;
