--- a/src/components/FirstBanner/style.scss
+++ b/src/components/FirstBanner/style.scss
@@ -92,7 +92,7 @@
     transition: transform 0.3s ease-in-out
   }
   
-  .carousel-item {
+  .carousel-item-first-banner {
     flex: 0 0 100%;
     text-align: center;
     transition: transform 0.3s ease-in-out;
