--- a/src/components/Vitrine/components/SliderVitrineDesktop/style.scss
+++ b/src/components/Vitrine/components/SliderVitrineDesktop/style.scss
@@ -28,6 +28,9 @@
     font-size: 16px;
     line-height: 18.25px; 
     color: #353535;
+    max-height: 50px;
+    height: 50px;
+    margin-bottom: 10px;
 }
 
 
